THRIFT-4283: fix TNamedPipeServer race condition in interrupt Client: C++ Patch: jn.goor@evs.com

This closes #1368